add new structure data for graph visualization cutoff